<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CarRental</string>
    <string name="rent_vehicle">Alquilar Vehículo</string>
    <string name="rent_bike">Alquilar Moto</string>
    <string name="welcome_message">Tu solución confiable para alquilar vehículos de forma rápida y segura. Con nuestra aplicación, encontrarás el auto perfecto para cada ocasión, desde un viaje de negocios hasta unas vacaciones familiares. Explora nuestra amplia selección de autos, elige el que mejor se adapte a tus necesidades y comienza tu viaje sin complicaciones. ¡Rentar un auto nunca fue tan fácil!</string>
    <string name="TXT_FECHA_INICIO" />
    <string name="TXT_SELECCIONAR_FECHA" />
    <string name="TXT_FECHA_FIN" />
    <string name="TXT_DIAS" />
    <string name="TXT_PRECIO_TOTAL" />
    <string name="seleccionar_fecha_de_inicio">Seleccionar fecha de inicio</string>
    <string name="seleccionar_fecha_de_fin">Seleccionar fecha de fin</string>
    <string name="atr_s">Continuar</string>
    <string name="todo">TODO</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="descargar_imagen">descargar_imagen\n</string>

</resources>