<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primer_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/imagen_vehiculo"
                android:layout_width="368dp"
                android:layout_height="226dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/nombre_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/quinto_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center" />


            <TextView
                android:id="@+id/precio_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tercer_color"
                android:textSize="16sp"
                android:gravity="center" />


            <TextView
                android:id="@+id/txt_fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT_FECHA_INICIO"
                android:textColor="@color/quinto_color"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:gravity="center" />


            <Button
                android:id="@+id/btn_fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_fecha_de_inicio"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/quinto_color"
                android:backgroundTint="@color/segundo_color" />


            <TextView
                android:id="@+id/txt_fecha_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT_FECHA_FIN"
                android:textColor="@color/quinto_color"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:gravity="center" />


            <Button
                android:id="@+id/btn_fecha_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/segundo_color"
                android:gravity="center"
                android:text="@string/seleccionar_fecha_de_fin"
                android:textColor="@color/quinto_color" />

            <TextView
                android:id="@+id/txt_dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT_DIAS"
                android:textColor="@color/quinto_color"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:gravity="center" />


            <TextView
                android:id="@+id/txt_precio_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT_PRECIO_TOTAL"
                android:textColor="@color/tercer_color"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:gravity="center" />


            <Button
                android:id="@+id/btn_atras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atr_s"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/quinto_color"
                android:backgroundTint="@color/segundo_color"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
